# wellness-check

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
ai_triage_monorepo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/: README.md
apps/gateway/: README.md
apps/gateway/src/gateway_app/: main.py  (+1 more)
apps/gateway/tests/: test_health.py  test_webhook.py
apps/ops-console/: README.md  index.html  package-lock.json  package.json  tsconfig.json
apps/ops-console/src/: App.tsx  api.test.ts  api.ts  styles.css
apps/voice-runtime/: README.md
apps/voice-runtime/tests/: test_extraction_seam.py  test_health.py  test_review_override.py  test_session_state_machine.py  test_vertical_slice.py
docker/: node-dev.Dockerfile  python-service.Dockerfile
docs/: README.md  architecture.md  careos-mcp-integration.md
openclaw/: README.md
openclaw/cron/: daily-summary.yaml  due-reminders.yaml  overdue-critical.yaml
openclaw/skills/careos-photo-intake/: SKILL.md  instructions.md
openclaw/skills/check-overdue-critical-doses/: SKILL.md  instructions.md
openclaw/skills/dispatch-due-medication-windows/: SKILL.md  instructions.md
openclaw/skills/send-caregiver-daily-summary/: SKILL.md  instructions.md
openclaw/tests/: test_careos_photo_intake_skill.py  test_medication_orchestration_skills.py
services/: README.md
services/careos-mcp/: README.md
services/documentation/: README.md
services/handoff-router/: README.md
services/medication-workflow/: README.md
services/safety-engine/: README.md
services/triage-engine/: README.md
(+57 files in other folders)
