[project]
name = "ai-triage-monorepo"
version = "0.1.0"
description = "Production-shaped monorepo scaffold for AI patient triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "structlog>=24.2.0",
  "httpx>=0.27.0",
  "pyyaml>=6.0.2",
  "psycopg[binary]>=3.2.0",
  "twilio>=9.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = [
  "apps",
  "services",
  "packages",
]
pythonpath = [
  "apps/gateway/src",
  "apps/voice-runtime/src",
  "services/triage-engine/src",
  "services/safety-engine/src",
  "services/handoff-router/src",
  "services/documentation/src",
  "services/careos-mcp/src",
  "services/medication-workflow/src",
  "packages/shared-types/python/src",
  "packages/protocols/python/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
